# mpc-lib

./: .clang-format  .clang-tidy  CMakeLists.txt  vcpkg.json
include/mpc/: Network.h  Player.h  Storage.h
include/player/: Concepts.h  Network.h  Player.h  Storage.h
src/common/cosigner/: cmp_ecdsa_signing_service.cpp
src/mpc_mpclib/: CMakeLists.txt  CreateSecret.h  Dump.h  KeyPersistencyImpl.h  NetworkImpl.h  PlatformImpl.cpp  PlayerImpl.h  PreprocessingPersistencyImpl.h  Serialization.h  Sign.h
src/player/: CMakeLists.txt  CreateSecret.cpp  CreateSecret.h  Dump.h  KeyPersistencyImpl.cpp  KeyPersistencyImpl.h  NetworkImpl.h  PlatformImpl.cpp  PlatformImpl.h  PlayerImpl.cpp  PlayerImpl.h  PreprocessingPersistencyImpl.cpp  PreprocessingPersistencyImpl.h  Serialization.h  Sign.cpp  Sign.h
test/: CMakeLists.txt
test/mpc_mpclib/: CMakeLists.txt  TestCreateSecret.cpp  main.cpp
test/player/: CMakeLists.txt  TestCreateSecret.cpp
